--- a/Hallym/1_gurobi.ipynb
+++ b/Hallym/1_gurobi.ipynb
@@ -136,6 +136,18 @@
    "display_name": "alpha",
    "language": "python",
    "name": "alpha"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
